--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body,html {
 
 
 .head-section {
+    z-index: 1000;
     background: black;
     position: sticky;
     left: 0; top: 0; right: 0;
@@ -47,7 +48,7 @@ body,html {
 .content-section {
     display: flex;
     justify-content: center;
-    min-height: 1000px;
+    min-height: 700px;
     margin-top: 100px;
 }
 .content-section__wrapper {
@@ -90,12 +91,12 @@ body,html {
 .footer-section__information-block {
     display: flex;
     flex-direction: row;
-    padding: 15px;
+    padding: 40px 0 ;
     align-items: center;
-    justify-content: space-around;
+    justify-content:center;
 }
 .footer-section__information-block ul {
-    margin: 0;
+    margin-right: 50px;
     padding: 0;
 }
 
@@ -113,7 +114,7 @@ body,html {
     /* border-top: 1px solid black;     */
     box-shadow: 0 0 10px 1px white;
     justify-content: center;
-    padding: 15px;
+    padding: 35px;
 }
 
 
